# todolist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build_and_deploy.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  dc.py
core/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: .env  docker-compose.prod.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py
goals/views/: __init__.py  board.py  other.py
tests/: factories.py  utils.py
tests/core/: conftest.py
tests/core/views/: test_login.py  test_profile_view.py  test_signup.py  test_update_password.py
tests/goals/view/: test_board.py  test_board_list.py  test_create_board.py
todolist/: settings.py  urls.py
