[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "todolist"
authors = ["dev <rvotaisrvota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-dotenv = "^0.21.1"
docker-compose = "^1.29.2"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
