[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "todolist"
authors = ["dev <rvotaisrvota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-dotenv = "^0.21.1"
docker-compose = "^1.29.2"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
django-filter = "^22.1"
django-extensions = "^3.2.1"
pydantic = "^1.10.4"
requests = "^2.28.2"
redis = "^4.4.2"
django-redis = "^5.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"
ansible-vault-win = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
